--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/phg0520/npgs.git",
-  "author": "phg0520 <a01099577792@gmail.com>",
+  "author": "",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "dev": "nodemon src/app.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
